--- a/JobComing/WebContent/WEB-INF/web.xml
+++ b/JobComing/WebContent/WEB-INF/web.xml
@@ -4,6 +4,7 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  <!-- 字符编码过滤器 -->
   <filter>
     <filter-name>Encodefilter</filter-name>
     <filter-class>com.job.filter.EncodingFilter</filter-class>
@@ -12,12 +13,22 @@
     <filter-name>Encodefilter</filter-name>
     <url-pattern>*.do</url-pattern>
   </filter-mapping>
+  <!-- Session过滤器 -->
   <filter>
     <filter-name>sessionfilter</filter-name>
     <filter-class>com.job.filter.HttpSessionFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>sessionfilter</filter-name>
+    <url-pattern>*.do</url-pattern>
+  </filter-mapping>
+  <!-- 用户是否登录过滤器 -->
+   <filter>
+    <filter-name>userfilter</filter-name>
+    <filter-class>com.job.filter.UserFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>userfilter</filter-name>
     <url-pattern>*.do</url-pattern>
   </filter-mapping>
 </web-app>
